# Progetto-Finale

./: .gitignore  CMakeLists.txt  a.out  player.h  player.hpp  printScoreboard.h  scoreBoard.hpp  showScoreboard.h  test.cpp
include/: game.h  game.hpp  player.h  player.hpp  position.h  printScoreboard.h  scoreBoard.hpp  square.h  square.hpp
include/gameLib/: game.h  game.hpp
include/playerLib/: player.h  player.hpp
include/squareLib/: square.h  square.hpp
src/: a.out  logFile.txt  monopoly.cpp  test.cpp
